--- a/example_hw_assignment/fake_hw1.tex
+++ b/example_hw_assignment/fake_hw1.tex
@@ -7,17 +7,19 @@
 
 \maketitle
 
-Please complete the following problems.
+Please complete the following problems and submit a file named \verb|assignment1.R|.
 \newline
 
 Remember:
 \begin{itemize}
-\item do not rename external files or edit them in any way.
-\item do not use global paths in your script. Instead, use \verb|setwd()| interactively in the console, but do not include this code in your submission.
-\item do not destroy or overwrite any variables in your program.
+\item Do not rename external data files or edit them in any way. In other words, don't modify \verb|data.csv|. Your code won't work properly on my version of that data set, if you do.
+\item Do not use global paths in your script. Instead, use \verb|setwd()| interactively in the console, but do not forget to remove or comment out this part of the code before you submit. The directory structure of your machine is not the same as the one on Gradescope's virtual machines.
+\item Do not destroy or overwrite any variables in your program. I check them only after I have run your entire program from start to finish.
+\item Check to make sure you do not have any syntax errors. Code that doesn't run will get a very bad grade. 
+\item Make sure to name your submission \verb|assignment1.R|
 \end{itemize}
 
-It might help to clear all the objects from your workspace, and then \verb|source| your file before you submit it. This will often uncover bugs.
+Tip: before submitting, it might help to clear all the objects from your workspace, and then \verb|source| your file before you submit it. This will often uncover bugs.
 
 
 \section{}
